--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="borrar" onclick="display.borrarTodo()">C</button>
             <button onclick="display.borrar()">&larr;</button>
             <button class="operador" value="raiz">√</button>
-            <button class="operador" value="dividir">%</button>
+            <button class="operador" value="dividir">/</button>
             <button class="numero">7</button>
             <button class="numero">8</button>
             <button class="numero">9</button>
