--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     
     <div class="container">
         <div class="texto">
-            <h1 style = "Font-family: Consolas, monaco, monospace;">Calculadora del equipo xd</h1>
+            <h1 style = "Font-family: Consolas, monaco, monospace;">Calculadora </h1>
+            <h1 style = "Font-family: Consolas, monaco, monospace;">Equipo TecnoPingüis</h1>
         </div>
         <div class="calculadora">
             <div class="display">
